---------------------------------------------------------------------------------------------------
Version: 2.1.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2023-12-23
  Changes:
    - Internal updates to reflect changes to Artisanal Reskins: Library, now depends on version 2.1.6
    - Revised tiers of hydro plants, electrowinning cells, and algae farms to reflect changes to Angel's mods and Extended Angels
  Bugfixes:
    - Fixed that the Fiberglass Board recipe added by Angel's mods was not properly reskinned under some circumstances.
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2023-01-01
  Changes:
    - Added support for adjusted tiers of Ore Processing techs
    - Added support for new tiers of Crystallizer and Filtration Unit
    - Added support for adjusted tiers for Sintering Ovens and Chemical Furnaces
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2022-10-06
  Locale:
    - Updated Traditional Chinese localization.
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2022-08-15
  Changes:
    - Removed internal building sprites native to Angel's Refining, minimum version is now 0.12.1
    - Removed internal building sprites native to Angel's Petrochemical Processing, minimum version is now 0.9.21
    - Removed internal item and recipe icons native to Angel's Smelting, minimum version is now 0.6.15
    - Added support for adjusted progression tiers for ore processing machines, pellet presses, and powder mixers to reflect changes to ingredients in Angel's Smelting version 0.6.20
    - Added support for adjusted progression tiers for chemical plants to reflect changes to ingredients in Angel's Petrochemical Processing version 0.9.23