@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.8
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that attempting to use Angels pipe material colors would fail
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.7
 Date: 2023-12-23
